# NuKit

./: .gitignore  DecayGraph.csv  Element.csv  IAEASpider.py  MultiIAEASpider.py  Nuclear.json  READM.md  README.md  Test.py  Test2.py  Untitled.ipynb
cpp/odeintTest/: CMakeLists.txt  Element.csv  harmonic_oscillator.cpp  maintest.cpp
cpp/odeintTest/src/: element.hpp
data/: DecayGraph.csv  Element.csv
python/: IAEASpider.py  MultiIAEASpider.py
qtapp/NuKit/: CMakeLists.txt  csvparser - Copy.hpp  csvparser.hpp  graphmodifier.cpp
qtapp/NuKit/src/: CMakeLists.txt  CMakeLists.txt.user~RF259a83b.TMP  main.cpp  oderun.csv
qtapp/NuKit/src/DataClass/: CMakeLists.txt  MultiIAEASpider.py  csvparser.cpp  csvparser.hpp  element.hpp
qtapp/NuKit/src/Frame/: CMakeLists.txt  graphmodifier.cpp  graphmodifier.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtbarwindow.cpp  qtbarwindow.h
qtapp/NuKit/src/Odeint/: odeoutput.hpp  stiffsys.hpp
qtapp/NuKit/src/Plot/: ElementTrend.py
qtapp/NuKit/src/Thread/: CMakeLists.txt  thread_calReact.cpp  thread_calReact.h  thread_getDecayInfo.hpp  thread_python.cpp  thread_python.h
qtapp/NuKit/src/frame/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtbarwindow.cpp  qtbarwindow.h
qtapp/NuKit/src/graphmodifier/: CMakeLists.txt  graphmodifier.cpp  graphmodifier.h
qtapp/NuKit/src/lib/: graphmodifier.lib
qtapp/NuKit/src/tmp/: main (2).cpp
qtapp/NuKit/src/tmp/frame/: qtbarwindow.cpp
qtapp/NuKit/src/tmp/graphmodifier/: CMakeLists.txt
