CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(odeint)
SET(CMAKE_BUILD_TYPE DEBUG)
# SET(CMAKE_BUILD_TYPE RELEASE)

SET(CMAKE_DEBUG_POSTFIX "_d")
SET(CMAKE_RELEASE_POSTFIX "_r")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/bin)    
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin)
# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/lib)    
# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/lib) 
MESSAGE("${EXECUTABLE_OUTPUT_PATH}")
FIND_PACKAGE(Boost)
IF (Boost_FOUND)
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
	ADD_DEFINITIONS( "-DHAS_BOOST" )
	MESSAGE("${Boost_INCLUDE_DIRS}")
	MESSAGE("${Boost_LIBRARIES}")
ELSE()
	MESSAGE("Not found Boost")
ENDIF()

AUX_SOURCE_DIRECTORY(./src SRC_LIST)
ADD_EXECUTABLE(odeintTest  ${SRC_LIST})
SET_TARGET_PROPERTIES(odeintTest PROPERTIES DEBUG_POSTFIX "_d")     
SET_TARGET_PROPERTIES(odeintTest PROPERTIES RELEASE_POSTFIX "_r")   

#target_link_libraries(odeintTest ${Boost_LIBRARIES}) #链接到工程